# SolarSystemFormationSimulation

./: README.md  animation.py  notebook.ipynb  notebook_2.ipynb  particule.py  system.py  test_pygame.py
StellarSystemFormationSimulation/: pyproject.toml
StellarSystemFormationSimulation/stellarsystemformationsimulation/: main.py
StellarSystemFormationSimulation/stellarsystemformationsimulation/simulation/: constants.py  simulation.py  utilities.py
StellarSystemFormationSimulation/stellarsystemformationsimulation/system/: constants.py  system.py  utilities.py
