[tool.poetry]
name = "stellarsystemformationsimulation"
version = "0.1.0"
description = ""
authors = ["Tiago <tiagovportela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pygame = "^2.5.2"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
